<resources>
    <string name="app_name">HiFIMusic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="content_placeholder">周杰伦 《一路向北》MP3</string>
    <string name="hint_search">输入搜索内容</string>
    <string name="loading_tips">正在加载中...</string>
    <string name="hint_login">登录</string>
    <string name="register">立即注册</string>
    <string name="login">用户登录</string>
    <string name="hint_account">请输入账号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_code">请输入验证码</string>
    <string name="string_login">登录</string>

    <string name="string_profile">个人资料</string>
    <string name="string_note">论坛帖子</string>
    <string name="string_charge">充值</string>
    <string name="string_msg">消息</string>
    <string name="string_score">积分</string>

</resources>
