<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@mipmap/bg2"
    android:fitsSystemWindows="true"
    >

    <!--  android:fitsSystemWindows="true"时自动添加状态栏高度 ?android:attr/actionBarSize-->



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_10"
        android:background="@drawable/shape_login_content"
        >

        <!--android:background="?android:attr/selectableItemBackground"
            配合clickable使用
        -->

        <RelativeLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/accountRl"
            android:id="@+id/backRl"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="@dimen/dp_40">
            <ImageView
                android:id="@+id/backIv"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:background="@mipmap/back_arrow"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_toEndOf="@+id/backIv"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/login"
                android:textSize="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/accountRl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/passwordRl"
            app:layout_constraintTop_toTopOf="@+id/backRl"
            android:layout_marginTop="@dimen/dp_55"
            android:layout_height="@dimen/dp_45"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@drawable/shape_input_bg"
            android:gravity="center"
            >

            <View
                android:layout_width="@dimen/dp_55"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_1"
                android:background="@drawable/shape_icon_bg"
                />
            <ImageView
                android:id="@+id/accountIv"
                android:layout_width="@dimen/dp_25"
                android:layout_height="25dp"
                android:src="@mipmap/account"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_15"
                />
            <EditText
                android:layout_toEndOf="@+id/accountIv"
                android:id="@+id/accountEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:hint="@string/hint_account"
                android:paddingStart="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_12"
                android:textCursorDrawable="@drawable/shape_edit_cursor"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/passwordRl"
            app:layout_constraintTop_toBottomOf="@+id/accountRl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@drawable/shape_input_bg"
            >

            <View
                android:layout_width="@dimen/dp_55"
                android:layout_height="match_parent"
                android:background="@drawable/shape_icon_bg"
                android:layout_margin="@dimen/dp_1"
                />
            <ImageView
                android:id="@+id/pwdIv"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@mipmap/pwd"
                android:layout_centerVertical="true"
                />

            <EditText
                android:layout_toEndOf="@+id/pwdIv"
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@null"
                android:hint="@string/hint_password"
                android:paddingStart="@dimen/dp_6"
                android:layout_marginStart="@dimen/dp_12"
                android:textCursorDrawable="@drawable/shape_edit_cursor"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/codeRl"
            app:layout_constraintTop_toBottomOf="@+id/passwordRl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            >

            <View
                android:id="@+id/iconView"
                android:layout_width="@dimen/dp_55"
                android:layout_height="match_parent"
                android:background="@drawable/shape_icon_bg"
                android:layout_margin="@dimen/dp_1"
                />
            <ImageView
                android:id="@+id/codeIcon"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:src="@mipmap/code"
                android:layout_centerVertical="true"
                />

            <LinearLayout
                android:layout_toEndOf="@+id/iconView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                <EditText
                    android:id="@+id/codeEt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:background="@null"
                    android:hint="@string/hint_code"
                    android:textCursorDrawable="@drawable/shape_edit_cursor"
                    />
                </LinearLayout>
                <ImageView
                    android:id="@+id/codeIv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="@dimen/dp_6"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@id/loginTv"
            app:layout_constraintTop_toBottomOf="@+id/loginTv"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_8"
            android:textSize="@dimen/dp_15"
            android:clickable="true"
            android:padding="@dimen/dp_6"
            android:background="?android:attr/selectableItemBackground"
            />


        <TextView
            android:id="@+id/loginTv"
            app:layout_constraintTop_toBottomOf="@+id/codeRl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/string_login"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/shape_login_bg"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>