<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg1"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatarIv"
            android:layout_width="@dimen/dp_65"
            android:layout_height="@dimen/dp_65"
            android:src="@mipmap/def"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:layout_margin="@dimen/dp_15"
            />

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="你的名字"
            android:textSize="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_20"
            app:layout_constraintStart_toEndOf="@+id/avatarIv"
            app:layout_constraintTop_toTopOf="@+id/avatarIv"
            />
        <TextView
            android:id="@+id/subTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/nameTv"
            app:layout_constraintStart_toStartOf="@+id/nameTv"
            android:text="上次登录事件2020/03/04/23:32"
            android:textSize="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_10"
            />

        <androidx.cardview.widget.CardView
            android:layout_margin="@dimen/dp_25"
            android:id="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/avatarIv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    >
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/fIv"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:src="@mipmap/todo"
                            android:layout_gravity="center"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:layout_below="@+id/fIv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_profile"
                            android:textSize="@dimen/dp_12"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_4"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/sIv"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:src="@mipmap/pad"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:layout_below="@+id/sIv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_note"
                            android:textSize="@dimen/dp_12"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_4"
                            />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/tIv"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:src="@mipmap/list"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:layout_below="@+id/tIv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_charge"
                            android:textSize="@dimen/dp_12"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_4"
                            />

                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    >
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/f1Iv"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:src="@mipmap/todo"
                            android:layout_gravity="center"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:layout_below="@+id/f1Iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_profile"
                            android:textSize="@dimen/dp_12"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_4"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/s1Iv"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:src="@mipmap/pad"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:layout_below="@+id/s1Iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_note"
                            android:textSize="@dimen/dp_12"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_4"
                            />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        >
                        <ImageView
                            android:id="@+id/t1Iv"
                            android:layout_width="@dimen/dp_25"
                            android:layout_height="@dimen/dp_25"
                            android:src="@mipmap/list"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:layout_below="@+id/t1Iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_charge"
                            android:textSize="@dimen/dp_12"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dp_4"
                            />

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>